--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cv-project",
   "version": "0.1.0",
+  "homepage": "https://ramzirm.github.io/cv-project",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,8 +12,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://ramzirm.github.io",
-  "scripts": {
+    "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
